--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,12 @@ quandl = "^3.7.0"
 radar = "^0.3"
 openpyxl = "^3.1.2"
 watchdog = "^3.0.0"
+streamlit-faker = "^0.0.2"
+faker = "^18.11.1"
+streamlit-extras = "^0.2.7"
+entrypoints = "^0.4"
+plotly-express = "^0.4.1"
+numerize = "^0.12"
 
 
 [build-system]
