--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,16 @@
 [tool.poetry]
 name = "tutorial-streamlit"
 version = "0.1.0"
-description = "Streamlit tutorials"
-authors = ["Ernesto Crespo <ecrespo@gmail.com>"]
-license = "GPLv3"
+description = ""
+authors = ["Ernesto Crespo <ecrespo@protonmail.com>"]
 readme = "README.md"
 packages = [{include = "tutorial_streamlit"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-streamlit = "^1.23.1"
-numpy = "^1.25.0"
-matplotlib = "^3.7.1"
+streamlit = "^1.25.0"
+numpy = "^1.25.2"
+matplotlib = "^3.7.2"
 matplotlib-venn = "^0.11.9"
 matplotlib-venn-wordcloud = "^0.2.6"
 plost = "^0.2.5"
@@ -20,11 +19,21 @@ radar = "^0.3"
 openpyxl = "^3.1.2"
 watchdog = "^3.0.0"
 streamlit-faker = "^0.0.2"
-faker = "^18.11.1"
-streamlit-extras = "^0.2.7"
+faker = "^19.3.0"
+streamlit-extras = "^0.3.0"
 entrypoints = "^0.4"
 plotly-express = "^0.4.1"
 numerize = "^0.12"
+langchain = "^0.0.263"
+openai = "^0.27.8"
+sentence-transformers = "^2.2.2"
+wikipedia = "^1.4.0"
+pillow = "9"
+streamlit-lottie = "^0.0.5"
+requests = "^2.31.0"
+protobuf = "^4.24.0"
+mitosheet = "^0.1.503"
+streamlit-option-menu = "^0.3.6"
 
 
 [build-system]
